--- a/myfrontpage/src/components/styles/Home.css
+++ b/myfrontpage/src/components/styles/Home.css
@@ -1,86 +1,96 @@
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f0f8ff;
-}
-
 .home-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: #f0f8ff;
-  color: #333;
+  font-family: Arial, sans-serif;
+  background-color: #f0f8ff;
   padding: 20px;
-  text-align: center;
 }
 
-.home-content {
-  background: linear-gradient(135deg, #87CEEB, #4682B4);
-  padding: 40px;
-  border-radius: 15px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
-  width: 80%;
-  max-width: 800px;
+.home-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .home-title {
-  font-size: 3em;
-  margin-bottom: 20px;
-  color: #fff;
+  font-size: 2em;
+  color: #333;
 }
 
-.home-text {
-  font-size: 1.5em;
-  color: #fff;
-}
-
-.clima-container {
-  background: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  margin-bottom: 20px;
-  width: 80%;
-  max-width: 800px;
-}
-
-.clima-title {
-  font-size: 2.5em;
-  margin-bottom: 20px;
-  color: #002366;
-}
-
-.weather-info {
-  font-size: 1.5em;
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.map {
+.data-summary {
+  display: flex;
+  justify-content: space-around;
   margin-top: 20px;
 }
 
-.contact-container {
-  background: #fff;
+.data-item {
+  text-align: center;
+}
+
+.data-value {
+  font-size: 2em;
+  color: #333;
+}
+
+.data-label {
+  font-size: 1em;
+  color: #777;
+}
+
+.air-quality-container {
+  text-align: center;
   padding: 20px;
   border-radius: 10px;
+  margin-top: 20px;
+  color: #fff;
+}
+
+.air-quality-title {
+  font-size: 1.5em;
+}
+
+.clima-map-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.forecast-container {
+  margin-top: 20px;
+}
+
+.forecast-title {
+  font-size: 1.5em;
+  color: #333;
+}
+
+.forecast-info {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.forecast-item {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  width: 80%;
-  max-width: 800px;
+}
+
+.contact-container {
+  text-align: center;
+  margin-top: 20px;
 }
 
 .contact-title {
-  font-size: 1.8em;
-  margin-bottom: 10px;
-  color: #002366;
+  font-size: 1.5em;
+  color: #333;
 }
 
 .social-icons {
   display: flex;
   justify-content: center;
   gap: 20px;
+  margin-top: 10px;
 }
 
 .social-icon {
